# PESUIO

./: README.md
assignment-1/PDF/: .env  README.md  main.py
assignment-1/Website/: .env  README.md  main.py
assignment-1/Website/data /: websit_content.md
assignment-2/: crew.py  main.py  pyproject.toml  report.md
assignment-2/config/: task.yaml
assignment-2/src/: .env  crew.py  main.py  pyproject.toml
assignment-2/src/config/: agent.yaml
assignment-2/src/tools/: custom_tool.py
