[project]
name = "final_project"
version = "0.1.0"
description = "final_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2,<1.0.0"
]

[project.scripts]
final_project = "final_project.main:run"
run_crew = "final_project.main:run"
train = "final_project.main:train"
replay = "final_project.main:replay"
test = "final_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

